javaDSL/src/test/resources/typeSystemTestModels/valid/classes/ClassNoCircularity.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

import java.lang.String;

public class ClassNoCircularity extends String {

}
